# SaiGo

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  licences.txt  valgrind.sh
include/: board_coord.h  consts.h  game_logic.h  groups.h  interface.h  stone_logic.h  types.h
src/: board_coord.c  board_coord.h  builder.ui  game_logic.c  groups.c  groups.h  interface.c  interface.h  main.c  stone_logic.c  stone_logic.h
src/include/: consts.h  dbg.h  types.h
src/parsers/: sgf_parser.c  sgf_parser.h
